# bitcounter

./: .travis.yml  CMakeLists.txt  LICENSE  Makefile  travis-build.sh
src/: bc_openmp.hpp  bitcnt.cpp  bitcnt.hpp  config.h.in  main.cpp  result.hpp  slice.hpp  sys-unix.cpp  sys.hpp  types.hpp  unit.hpp
test/: CMakeLists.txt  all_ones.cpp  all_zeroes.cpp
